[package]
name = "baokeshed"
version = "0.1.0"
authors = ["Jack O'Connor <oconnor663@gmail.com>"]
license = "MIT"
edition = "2018"

[features]
default = ["rayon"]
c_portable = []
c_sse41 = ["c_portable"]
c_avx2 = ["c_portable", "c_sse41"]
c_avx512 = ["c_portable", "c_sse41", "c_avx2"] # requires AVX512 F+VL
c_armv7neon = ["c_portable"]
c_native = ["c_portable"]

[dependencies]
arrayref = "0.3.5"
arrayvec = { version = "0.5.0", default-features = false, features = ["array-sizes-33-128"] }
bitflags = "1.1.0"
constant_time_eq = "0.1.4"
rayon = { version = "1.2.0", optional = true }

[dev-dependencies]
page_size = "0.4.1"
rand = "0.7.0"

[build-dependencies]
cc = "1.0.45"
