[package]
name = "baokeshed_bin"
version = "0.1.0"
authors = ["Jack O'Connor"]
license = "MIT"
readme = "../README.md"
edition = "2018"

[[bin]]
name = "baokeshed"
path = "src/main.rs"

[dependencies]
baokeshed = { path = "..", version = "0.1" }
docopt = "1.1.0"
failure = "0.1.5"
hex = "0.4.0"
memmap = "0.7.0"
serde = { version = "1.0.100", features = ["derive"] }

[dev-dependencies]
assert_cmd = "0.11.1"
duct = "0.13.0"
tempfile = "3.1.0"
